--- a/src/app/features/dashboard/transacoes/transacoes.component.html
+++ b/src/app/features/dashboard/transacoes/transacoes.component.html
@@ -11,60 +11,59 @@
   </div>
 
   <article class="ui-card ui-card--list">
-    <header class="ui-card__head">
-      <div>
-        <div class="ui-card__title">Todas as Transações</div>
-        <div class="ui-card__sub">{{ totalLabel }}</div>
-      </div>
-
-      <div class="ui-card__right">
-        <div class="ui-card__sum">{{ totalValor }}</div>
-        <div class="ui-card__chev">▾</div>
-      </div>
-    </header>
-
     <div class="ui-list" *ngIf="!carregando; else loading">
-      <ng-container *ngFor="let tx of txs; trackBy: trackById; let i = index">
-        <div class="ui-list__group" *ngIf="i === 0 || txs[i - 1].groupLabel !== tx.groupLabel">
-          <span>{{ tx.groupLabel }}</span>
-        </div>
+      <ng-container *ngIf="txs.length; else empty">
+        <ng-container *ngFor="let tx of txs; trackBy: trackById; let i = index">
+          <div class="ui-list__group" *ngIf="i === 0 || txs[i - 1].groupLabel !== tx.groupLabel">
+            <span>{{ tx.groupLabel }}</span>
+          </div>
 
-        <div class="ui-row">
-          <div class="ui-row__left">
-            <div class="ui-row__ico">{{ tx.icon }}</div>
+          <div class="ui-row">
+            <div class="ui-row__left">
+              <div class="ui-row__ico">{{ tx.icon }}</div>
 
-            <div class="ui-row__text">
-              <div class="ui-row__title">
-                {{ tx.desc }}
-                <span class="ui-tag ui-tag--gray" *ngIf="tx.tags?.[0]">{{ tx.tags[0] }}</span>
+              <div class="ui-row__text">
+                <div class="ui-row__title">
+                  {{ tx.desc }}
+                  <span class="ui-tag ui-tag--gray" *ngIf="tx.tags?.[0]">{{ tx.tags[0] }}</span>
+                </div>
+
+                <div class="ui-row__tags" *ngIf="(tx.tags?.length ?? 0) > 1">
+                  <span class="ui-tag ui-tag--orange" *ngFor="let t of tx.tags.slice(1)">{{ t }}</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="ui-row__right">
+              <div
+                class="ui-value"
+                [class.ui-value--pos]="(tx.numeric ?? 0) > 0"
+                [class.ui-value--neg]="(tx.numeric ?? 0) < 0"
+              >
+                {{ tx.value }}
               </div>
 
-              <div class="ui-row__tags" *ngIf="(tx.tags?.length ?? 0) > 1">
-                <span class="ui-tag ui-tag--orange" *ngFor="let t of tx.tags.slice(1)">{{ t }}</span>
+              <div class="row__actions">
+                <button class="ui-btn ui-btn--tiny ui-btn--ghost" type="button" (click)="editar(tx)">Editar</button>
+                <button class="ui-btn ui-btn--tiny ui-btn--danger" type="button" (click)="excluir(tx)">Excluir</button>
               </div>
             </div>
           </div>
-
-          <div class="ui-row__right">
-            <div
-              class="ui-value"
-              [class.ui-value--pos]="(tx.numeric ?? 0) > 0"
-              [class.ui-value--neg]="(tx.numeric ?? 0) < 0"
-            >
-              {{ tx.value }}
-            </div>
-
-            <div class="row__actions">
-              <button class="ui-btn ui-btn--tiny ui-btn--ghost" (click)="editar(tx)">Editar</button>
-              <button class="ui-btn ui-btn--tiny ui-btn--danger" (click)="excluir(tx)">Excluir</button>
-            </div>
-          </div>
-        </div>
+        </ng-container>
       </ng-container>
+
+      <ng-template #empty>
+        <div class="empty">
+          Nenhuma transação encontrada com os filtros atuais.
+        </div>
+      </ng-template>
     </div>
 
     <ng-template #loading>
       <div class="loading">Carregando...</div>
     </ng-template>
   </article>
+
+  <!-- ✅ Modal shared -->
+  <app-tx-modal #txModal (saved)="onTxSaved($event)"></app-tx-modal>
 </section>
