--- a/src/app/features/auth/components/auth-card/auth-card.component.scss
+++ b/src/app/features/auth/components/auth-card/auth-card.component.scss
@@ -6,6 +6,8 @@
   backdrop-filter: blur(12px);
   // box-shadow: 0 0 12px rgba(0,0,0,0.3);
   text-align: center;
+  color: #fff !important;
+
 }
 
 :host {
