--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -28,7 +28,7 @@
     </button>
   </form>
 
-  <div class="flex justify-content-between align-items-center">
+  <div class="flex justify-content-between align-items-center m-4">
     <a routerLink="/auth/register" class="link">Criar uma conta</a>
     <a routerLink="/auth/forgot-password" class="link">Esqueceu a senha?</a>
   </div>
